#INCLUDES =  -I../src
AM_FFLAGS=-I../src
#noinst_PROGRAMS = jamgo
#jamgo_LDFLAGS = $(LDFLAGS)
#jamgo_SOURCES = jamtest.f
#jamgo_SOURCES = mainv1.f
#jamgo_LDADD = ../src/.libs/libjam.so

bin_PROGRAMS = jamexe
#jamexe_MAIN=main5.f

jamexe_SOURCES=main5.f 
#jamexe_SOURCES=mainpp1.f 
#jamexe_SOURCES=jamtest.f 
#jamexe_SOURCES=maketable.f 
#jamexe_SOURCES=testeos.f 
jamexe_LDADD = ../src/libjam.a
#jamexe_LDFLAGS = -lstdc++

EXTRA_DIST = Example ana.f ana2.f ana3.f anaNA49.f anaPhi.f anaR.f ana_wa80.f\
 anae802.f jamclust.f jamdummy.f jamtest.f\
 main.f main2.f main3.f main4.f main5.f\
 main400gev.f mainAuAu.f mainE802.f mainEt.f mainFlow.f mainNA35.f mainNA44.f\
 mainP.f mainPbPb.f mainPhi.f mainR.f mainUA1.f mainWA98.f main_blz.f\
 main_blzNTP.f main_pi0dec.f mainbuu.f mainj.f mainpA.f mainpip.f\
 mainpip2.f mainpipi.f mainpn2.f mainpp1.f mainpp2.f mainpp3.f mainu.f\
 jam.cfg ppTest2.f pHeTest3.f mainHK.f phsann.f phsann-1.f mainrqmd.f\
 mainv1.f testeos.f charge.f main6.f maketable.f ptable.f mainee.f mainini.f

