noinst_LIBRARIES = libjam.a

libjam_a_SOURCES = jam.f jamana.f jambuu.f jamrqmd.f jamrqmd1.f\
 jamrqmd2.f jamrqmd3.f jamrqmd4.f jamrqmd5.f jamqmd.f jamcoll.F jamcross.f\
 jamdat.f jamdec.f jamhard.f jamhij.f jampdf.f jamsoft.f jameos.f\
 jampyjet.f jampysigh.f jampythia.f vnibook.f\
 gfortran.f jamdummy.f eosUrQMD.f\
 fluid.f ppm.f hlle_ak.f jam2hydro.f\
 freezeout.f cornelius.f90 jamcluster.f\
 jam1.inc jam2.inc jam3.inc jam4.inc jameos.inc fluid.inc

#pdf1inc_HEADERS =
#libjam_la_LDFLAGS = -module

EXTRA_DIST =  

